[package]
name = "hygieia"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-sdk-dynamodb = "1.48.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["cloudwatch_events"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
color-eyre = "0.6.3"
csv-async = "1.3.0"
futures = "0.3.30"

lambda_runtime = "0.13.0"
reqwest = { version = "0.12.7", features = ["stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }

