[package]
name = "hygieia"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]
AWS_REGION = "us-west-2"
TEST_LOCAL_DYNAMODB = "http://localhost:8000"
RUST_LOG = "info,hygieia=trace"

[dependencies]
aws-config = "1.5.7"
aws-sdk-dynamodb = "1.48.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["cloudwatch_events"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
color-eyre = "0.6.3"
csv-async = "1.3.0"
futures = "0.3.30"

lambda_runtime = "0.13.0"
reqwest = { version = "0.12.7", features = ["stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }
velcro = "0.5.4"

