[package]
name = "hygieia"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
color-eyre = "0.6.3"
csv = "1.3.0"
dotenvy = "0.15.7"
rusqlite = { version = "0.32.1", features = ["bundled", "uuid", "chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
ureq = "2.10.1"
uuid = { version = "1.10.0", features = ["v7", "zerocopy"] }
velcro = "0.5.4"
